# integrator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_PROXY_CHAIN_2026-02-19.md  CHANGELOG.md  INTEGRATOR_AUDIT_2026-02-18.md  LICENSE  OPERATIONS_QUICKSTART.md  PRIVACY.md  README.md  SESSION_HANDOFF_PROXY_CHAIN_2026-02-19.md  THIRD_PARTY_NOTICES.md  US_TUN_MODE.md  agent_memory_client.py  agent_memory_routes.py  agents_ops.py  algo_params_extract.py  algo_strategy_cards.py  algo_video_full_transcribe.py  algo_video_ingest.py  algo_video_samples.py  algo_video_samples_summarize.py  app.py  automate_us_proxy_route.ps1  chains.json  chains.py  cli.py  cli_cmd_agents.py  cli_cmd_algotrading.py  cli_cmd_git.py  cli_cmd_hygiene.py  cli_cmd_localai.py  cli_cmd_misc.py  cli_cmd_obsidian.py  cli_cmd_projects.py  cli_cmd_run.py  cli_env.py  cli_incidents.py  cli_parallel.py  (+70 more)
.github/: CODEOWNERS  PROJECT_CANON.md  pull_request_template.md
.trae/: global_gitignore_localai
docs/: AGENT_MEMORY_CLIENT_REVIEW_2026-02-28.md  AGENT_TASK_INTAKE.md  ARCHITECTURE.md  CODE_REVIEW.md  DOCS_INDEX.md  GITHUB_API_AUTH.md  GITHUB_ISSUES_PROJECTS_MEMORY.md  GITHUB_PROJECTS_DEEP_RESEARCH_RU.md  INCIDENTS.md  INCIDENT_TEMPLATE.md  INTEGRATOR_MINI_GLOSSARY.md  LLM_SIDECAR.md  OBSIDIAN_CLI_ADOPTION_2026-02-28.md  P17_ROLLBACK.md  POLICY_MIGRATION_PATH.md  PROJECTS_MIGRATION_RUNBOOK.md  PROJECT_RULES_FULL.md  RFC_P2_ARCH_1_EVENT_DRIVEN_AGENTS_2026-03-04.md  ROLLBACK.md  RULES_MAP.md  SELF_ANALYSIS.md  SELF_TUNING_QUALITY_FIRST.md  SESSION_CLOSE_PROTOCOL.md  SKILLS_INDEX.md  SKILLS_PATH_COMPATIBILITY.md  SLI_SLO.md  TECHNICAL_CHANGELOG_2026-02-20.md  TELEGRAM_REMOTE_BRIDGE.md  ZAPOVEDNIK_PROMPTOV.md  agent_memory_epic_links_comment.md  agent_memory_tasks.md  issue_5_intake_comment.md  issue_5_move_out_comment.md  issue_5_resolution_comment.md  issue_memory_p0_conflict_markers.md  issue_memory_p0_secret_hygiene_workspace.md  issue_memory_p1_incident_memory_write.md  issue_memory_p1_refresh_audit.md  issue_memory_task_agent_memory_cli_read.md  issue_memory_task_agent_memory_client_read.md  (+15 more)
integrator/: __main__.py  agents_ops.py  app.py  chains.py  cli.py  git_ops.py  registry.json  registry.py  run_ops.py  utils.py
reports/: agent_24x7_inventory_2026-03-05.json  agent_24x7_inventory_2026-03-05.md  agent_24x7_master_recommendation_2026-03-05.json  agent_24x7_master_recommendation_2026-03-05.md  all_repos_audit_and_push_20260320_0340.md  apply_approved_candidate_20260307_161825.json  assistant_git_hygiene_20260220_000427.md  assistant_hygiene_20260220_0036.md  assistant_untracked_organize_20260220_0040.md  asus_issues_matrix_and_remediation_2026-03-09.md  audit_conclusion_2026-02-20.md  audit_refresh_2026-02-28.md  audit_snapshot_2026-02-20.json  b1_ci_diagnostic_20260304_164002.json  b1_remote_ci_validation_20260304_162152.json  b1_remote_ci_validation_20260304_164250.json  branch_protection_apply_20260304_160339.json  branch_protection_apply_20260306_225039.json  branch_protection_apply_20260306_230218.json  branch_protection_apply_20260306_231518.json  branch_protection_apply_20260306_231532.json  branch_protection_apply_20260306_231842.json  branch_protection_apply_20260307_110330.json  branch_protection_apply_20260307_112652.json  branch_protection_apply_20260307_112901.json  branch_protection_apply_20260307_121558.json  branch_protection_apply_20260307_121625.json  branch_protection_apply_20260307_122206.json  branch_protection_apply_20260307_122208.json  branch_protection_apply_20260307_122730.json  branch_protection_apply_20260307_122731.json  branch_protection_apply_20260307_122958.json  branch_protection_apply_20260307_123130.json  (+339 more)
(+593 files in other folders)
