[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrator"
version = "0.2.0"
description = "Integrator CLI for managing multi-project workflows"
requires-python = ">=3.10"
authors = [{ name = "egork" }]
dependencies = []

[project.optional-dependencies]
dev = ["coverage>=7.13.4", "mypy>=1.19.1", "ruff>=0.15.1"]

[project.scripts]
integrator = "integrator:main"

[tool.setuptools]
py-modules = ["integrator", "agent_memory_client", "app", "agents_ops", "chains", "cli", "cli_env", "cli_parallel", "cli_quality", "cli_select", "cli_workflow", "git_ops", "registry", "run_ops", "scan", "utils", "version"]

[tool.ruff]
target-version = "py310"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", ".tmp", "vault"]

[tool.mypy]
python_version = "3.10"
exclude = "^(vault|\\\\.tmp)(/|\\\\\\\\)"

