[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrator"
version = "0.2.0"
description = "Integrator CLI for managing multi-project workflows"
requires-python = ">=3.10"
authors = [{ name = "egork" }]
dependencies = []

[project.optional-dependencies]
dev = ["coverage>=7.13.4", "mypy>=1.19.1", "ruff>=0.15.1", "pre-commit>=3.7.0"]

[project.scripts]
integrator = "integrator:main"

[tool.setuptools]
py-modules = ["integrator", "agent_memory_client", "app", "agents_ops", "chains", "cli", "cli_cmd_agents", "cli_cmd_git", "cli_cmd_hygiene", "cli_cmd_localai", "cli_cmd_misc", "cli_cmd_projects", "cli_cmd_run", "cli_env", "cli_incidents", "cli_parallel", "cli_perf", "cli_quality", "cli_select", "cli_workflow", "git_ops", "registry", "run_ops", "scan", "services_preflight", "utils", "version", "zapovednik"]

[tool.ruff]
target-version = "py310"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", ".tmp", "vault", "LocalAI"]

[tool.mypy]
python_version = "3.10"
exclude = "^(vault|\\\\.tmp|LocalAI)(/|\\\\\\\\)"


