[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrator"
dynamic = ["version"]
description = "Integrator CLI for managing multi-project workflows"
requires-python = ">=3.10"
authors = [{ name = "egork" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.3.0",
  "coverage>=7.13.4",
  "mypy>=1.19.1",
  "pre-commit>=3.7.0",
  "ruff>=0.15.1",
  "twine>=6.1.0",
]

[project.scripts]
integrator = "integrator:main"

[tool.setuptools]
py-modules = ["integrator", "agent_memory_client", "agent_memory_routes", "app", "agents_ops", "chains", "cli", "cli_cmd_agents", "cli_cmd_algotrading", "cli_cmd_git", "cli_cmd_hygiene", "cli_cmd_localai", "cli_cmd_misc", "cli_cmd_obsidian", "cli_cmd_projects", "cli_cmd_run", "cli_env", "cli_incidents", "cli_parallel", "cli_perf", "cli_quality", "cli_select", "cli_workflow", "contract_schemas", "git_ops", "github_api", "github_issues", "integrator_resources", "registry", "run_ops", "scan", "services_preflight", "tslab_offline_csv", "utils", "version", "zapovednik", "zapovednik_policy"]

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }

[tool.ruff]
target-version = "py310"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "venv", ".tmp", "vault", "LocalAI", "bhagavad-gita-reprint"]

[tool.mypy]
python_version = "3.10"
exclude = "^(venv|vault|\\\\.tmp|LocalAI|bhagavad-gita-reprint)(/|\\\\\\\\)"

